--- a/css/pdf.css
+++ b/css/pdf.css
@@ -10,8 +10,11 @@ span[contenteditable] { display: inline-block; }
 
 h1 { font: bold 100% sans-serif; letter-spacing: 0.5em; text-align: center; text-transform: uppercase; }
 
-/* page */
+html { font: 16px/1 'Open Sans', sans-serif; overflow: auto; padding: 0.5in; }
+html { background: #999; cursor: default; }
 
+body { box-sizing: border-box; height: 11in; margin: 0 auto; overflow: hidden; padding: 0.5in; width: 8.5in;border: 10px solid #777;}
+body { background: #FFF; border-radius: 1px; box-shadow: 0 0 1in -0.25in rgba(0, 0, 0, 0.5); }
 
 /* header */
 
@@ -34,12 +37,7 @@ article h1 { clip: rect(0 0 0 0); position: absolute; }
 
 article address { float: left; font-size: 125%; font-weight: bold; }
 
-/* table meta & balance */
-
-table.meta, table.balance { float: right; width: 36%; }
-table.meta:after, table.balance:after { clear: both; content: ""; display: table; }
-
-
+/* aside */
 
 aside h1 { border: none; border-width: 0 0 1px; margin: 0 0 1em; }
 aside h1 { border-color: #999; border-bottom-style: solid; }
@@ -48,27 +46,27 @@ aside h1 { border-color: #999; border-bottom-style: solid; }
 
 .add, .cut
 {
-	border-width: 1px;
-	display: block;
-	font-size: .8rem;
-	padding: 0.25em 0.5em;	
-	float: left;
-	text-align: center;
-	width: 0.6em;
+    border-width: 1px;
+    display: block;
+    font-size: .8rem;
+    padding: 0.25em 0.5em;  
+    float: left;
+    text-align: center;
+    width: 0.6em;
 }
 
 .add, .cut
 {
-	background: #9AF;
-	box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-	background-image: -moz-linear-gradient(#00ADEE 5%, #0078A5 100%);
-	background-image: -webkit-linear-gradient(#00ADEE 5%, #0078A5 100%);
-	border-radius: 0.5em;
-	border-color: #0076A3;
-	color: #FFF;
-	cursor: pointer;
-	font-weight: bold;
-	text-shadow: 0 -1px 2px rgba(0,0,0,0.333);
+    background: #9AF;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+    background-image: -moz-linear-gradient(#00ADEE 5%, #0078A5 100%);
+    background-image: -webkit-linear-gradient(#00ADEE 5%, #0078A5 100%);
+    border-radius: 0.5em;
+    border-color: #0076A3;
+    color: #FFF;
+    cursor: pointer;
+    font-weight: bold;
+    /* text-shadow: 0 -1px 2px rgba(0,0,0,0.333); */
 }
 
 .add { margin: -2.5em 0 0; }
@@ -81,11 +79,11 @@ aside h1 { border-color: #999; border-bottom-style: solid; }
 tr:hover .cut { opacity: 1; }
 
 @media print {
-	* { -webkit-print-color-adjust: exact; }
-	html { background: none; padding: 0; }
-	body { box-shadow: none; margin: 0; }
-	span:empty { display: none; }
-	.add, .cut { display: none; }
+    * { -webkit-print-color-adjust: exact; }
+    html { background: none; padding: 0; }
+    body { box-shadow: none; margin: 0; }
+    span:empty { display: none; }
+    .add, .cut { display: none; }
 }
 
 @page { margin: 0; }
@@ -110,13 +108,12 @@ article h2 {
     text-align: justify;
 }.action {
     float: right;
-    margin-top: 50px;
 } .top h1 {
     background: #000;
     border-radius: 0.25em;
     color: #FFF;
     margin: 0 0 1em;
-    padding: 0.5em 0;
+    padding: 0.9em 0;
 }input[type="file"] {
     float: right;
     margin-top: 60px;
@@ -126,4 +123,29 @@ article h2 {
 }
 .image-upload {
     float: right;
+}@media print {
+   .action {
+          display: none;
+            }
+}
+div#footer-bottom {
+    background: #000;
+    border-radius: 0.25em;
+    color: #FFF;
+    margin: 0 0 1em;
+    padding: 0.9em 0;
+}div#footer-bottom, div[contenteditable]:hover, div[contenteditable]:focus, td:hover div[contenteditable], td:focus div[contenteditable], img.hover {
+    background: none;
+    box-shadow: none;
+  
+}div#footer-bottom {
+    background: #000;
+    color: #fff;
+}div#footer-bottom {
+    background: #000;
+    color: #fff;
+   
+}div#footer-bottom {
+    WIDTH: 660;
+    MARGIN-LEFT: 30PX;
 }
